--- a/style.css
+++ b/style.css
@@ -27,6 +27,15 @@ body {
   max-width: 500px;
 }
 
+#logout {
+  height: 3rem;
+  width: 6rem;
+  border-radius: 10px;
+  font-size: 1.3rem;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
 .stats-container {
   padding: 30px;
   border-radius: 20px;
@@ -85,6 +94,7 @@ input {
   outline: none;
   color: var(--text);
   width: 20%;
+  font-size: 1rem;
 }
 
 button {
@@ -122,17 +132,41 @@ button {
   align-items: center;
 }
 
+.img {
+  position: relative;
+}
+
 .task {
   display: flex;
   align-items: center;
   gap: 10px;
+  position: relative;
+  overflow: hidden;
+  margin-right: 12%;
 }
 
-.task input {
-  width: 20px;
-  height: 20px;
+.checkbox {
   margin: 0 10px;
   cursor: pointer;
+  border-radius: 50%;
+  appearance: none;
+}
+
+.checkbox:checked {
+  background: url(/images/istockphoto-1184953385-612x612.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  border: none;
+}
+
+.task p {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  margin: 0;
+  padding: 0;
+  flex-grow: 1;
 }
 
 .completed p {
@@ -146,6 +180,89 @@ button {
   color: white;
   margin: 0 5px;
   cursor: pointer;
+}
+
+.editTask {
+  position: absolute;
+  right: 40px;
+}
+
+.loader {
+  width: 40px;
+  aspect-ratio: 1;
+  color: var(--teal);
+  position: relative;
+  background: radial-gradient(10px, currentColor 94%, #0000);
+  margin: auto;
+}
+.loader:before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 50%;
+  background: radial-gradient(9px at bottom right, #0000 94%, currentColor) top
+      left,
+    radial-gradient(9px at bottom left, #0000 94%, currentColor) top right,
+    radial-gradient(9px at top right, #0000 94%, currentColor) bottom left,
+    radial-gradient(9px at top left, #0000 94%, currentColor) bottom right;
+  background-size: 20px 20px;
+  background-repeat: no-repeat;
+  animation: l18 1.5s infinite cubic-bezier(0.3, 1, 0, 1);
+}
+@keyframes l18 {
+  33% {
+    inset: -10px;
+    transform: rotate(0deg);
+  }
+  66% {
+    inset: -10px;
+    transform: rotate(90deg);
+  }
+  100% {
+    inset: 0;
+    transform: rotate(90deg);
+  }
+}
+
+.loadingText {
+  width: fit-content;
+  font-weight: bold;
+  font-family: monospace;
+  font-size: 1.4rem;
+  clip-path: inset(0 100% 0 0);
+  animation: l5 1s steps(11) infinite;
+  margin: 3% auto;
+  color: var(--teal);
+}
+.loadingText:before {
+  content: "Loading...";
+}
+@keyframes l5 {
+  to {
+    clip-path: inset(0 -1ch 0 0);
+  }
+}
+
+.toast {
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: var(--secondaryBackground);
+  color: var(--teal);
+  padding: 16px;
+  border-radius: 8px;
+  font-size: 1rem;
+  font-weight: bold;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s ease, visibility 0.5s ease;
+  z-index: 1000;
+}
+
+.toast.show {
+  opacity: 1;
+  visibility: visible;
 }
 
 @media screen and (max-width: 400px) {
@@ -169,5 +286,22 @@ button {
   #taskInput {
     margin-left: 10px;
   }
- 
+
+  #logout {
+    height: 2.5rem;
+    width: 5.5rem;
+    font-size: 1.3rem;
+  }
+
+  .taskItem img {
+    width: 20px;
+    height: 20px;
+  }
+
+  .editTask {
+    right: 30px;
+  }
+  .checkbox {
+    margin: 0 7px;
+  }
 }
